--- a/Dockerfile.wheezy
+++ b/Dockerfile.wheezy
@@ -8,6 +8,7 @@ WORKDIR /tmp
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
         unzip \
+        wget ca-certificates less \
         make
 
 COPY scripts scripts
