--- a/Dockerfile.jessie
+++ b/Dockerfile.jessie
@@ -9,6 +9,7 @@ RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
         unzip \
         wget ca-certificates less \
+        apt-transport-https \
         make
 
 COPY scripts scripts
