Uncentralize versions in Makefile (as it blocks travis builds...)

--- a/Dockerfile.wheezy
+++ b/Dockerfile.wheezy
@@ -2,17 +2,10 @@ FROM debian:wheezy
 
 MAINTAINER Manala <contact@manala.io>
 
-# Ansible version
-ARG ANSIBLE_VERSION
-ENV ANSIBLE_VERSION ${ANSIBLE_VERSION}
-
-# Ansible lint version
-ARG ANSIBLE_LINT_VERSION
-ENV ANSIBLE_LINT_VERSION ${ANSIBLE_LINT_VERSION}
-
-# Goss version
-ARG GOSS_VERSION
-ENV GOSS_VERSION ${GOSS_VERSION}
+# Versions
+ENV ANSIBLE_VERSION      2.2.0.0
+ENV ANSIBLE_LINT_VERSION 3.4.7
+ENV GOSS_VERSION         0.2.4
 
 WORKDIR /tmp
 
