--- a/Dockerfile.wheezy
+++ b/Dockerfile.wheezy
@@ -3,9 +3,9 @@ FROM debian:wheezy
 MAINTAINER Manala <contact@manala.io>
 
 # Versions
-ENV ANSIBLE_VERSION      2.2.0.0
-ENV ANSIBLE_LINT_VERSION 3.4.9
-ENV GOSS_VERSION         0.2.4
+ENV ANSIBLE_VERSION      2.2.1.0
+ENV ANSIBLE_LINT_VERSION 3.4.10
+ENV GOSS_VERSION         0.2.5
 
 WORKDIR /tmp
 
@@ -15,7 +15,9 @@ RUN apt-get update \
         unzip \
         wget ca-certificates less \
         apt-transport-https \
-        make
+        make \
+        procps \
+        vim
 
 COPY scripts scripts
 
