--- a/Dockerfile.wheezy
+++ b/Dockerfile.wheezy
@@ -13,7 +13,7 @@ WORKDIR /tmp
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
         unzip \
-        wget ca-certificates less \
+        wget curl ca-certificates less \
         apt-transport-https \
         make \
         procps \
